[package]
name = "grindstone"
version = "0.1.0"
description = "A pomodoro timer with session tracking and statistics"
authors = ["pants"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0"
color-eyre = "0.6.3"
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5.0"
chrono = "0.4"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
